changes for extra keyword

--- a/box.html
+++ b/box.html
@@ -10,7 +10,7 @@
             <a href="table.html">table</a> 
         </nav>
         <div class="box">
-            content inside box
+            content inside box need to arranged and css 
         </div>
     </body>
 </html>
